build: remove release and disable codacy

--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "build:watch": "tsc -b -w",
     "clean": "lerna run clean",
     "codacy": "cat coverage/lcov.info | codacy-coverage",
-    "coverage": "jest --coverage --maxWorkers=60%",
+    "coverage": "yarn coverage:nodejs",
+    "coverage:nodejs": "jest --coverage --maxWorkers=60%",
     "depcheck": "lerna run depcheck",
     "dev": "yarn test:watch",
     "lint": "eslint --ext=ts,js .",
     "ncu": "echo npm-check-updates && ncu -i && lerna exec ncu -- -i",
     "nuke": "yarn clean && lerna clean -y && rimraf node_modules",
     "release": "lerna publish --amend",
-    "test": "jest --maxWorkers=60%",
+    "test": "yarn test:nodejs",
+    "test:nodejs": "jest --maxWorkers=60%",
     "test:watch": "jest --watch --maxWorkers=60%",
     "verify": "yarn clean && yarn lint && yarn build && yarn depcheck && yarn coverage",
     "watch": "yarn test:watch"
@@ -50,7 +52,6 @@
     "babel-plugin-istanbul": "^6.0.0",
     "codacy-coverage": "^3.4.0",
     "codecov": "^3.6.5",
-    "commitlint-circle": "^1.0.0",
     "depcheck": "^0.9.2",
     "dependency-check": "^4.1.0",
     "eslint": "^6.8.0",
