build: add commitlint-circle back
It is useful when you use merge/squash PR.
It will enforce those commit also follows the conventional commit format.

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,6 +29,7 @@ jobs:
           path: node_modules
           key: ${{ runner.os }}-node-modules-${{ hashFiles('**/yarn.lock') }}
       - run: yarn
+      - run: yarn commitlint-circle
       - run: yarn lint
       - run: yarn build
       - run: yarn depcheck
