--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "co-coders-typescript",
-  "version": "1.0.0",
   "private": true,
   "repository": "https://github.com/clean-code-projects/co-coders-typescript.git",
   "license": "MIT",
@@ -13,7 +12,7 @@
     "build:watch": "tsc -b -w",
     "clean": "lerna run clean",
     "codacy": "cat coverage/lcov.info | codacy-coverage",
-    "coverage": "yarn coverage:nodejs",
+    "coverage": "jest --coverage --maxWorkers=60%",
     "coverage:nodejs": "jest --coverage --maxWorkers=60%",
     "depcheck": "lerna run depcheck",
     "dev": "yarn test:watch",
@@ -21,7 +20,7 @@
     "ncu": "echo npm-check-updates && ncu -i && lerna exec ncu -- -i",
     "nuke": "yarn clean && lerna clean -y && rimraf node_modules",
     "release": "lerna publish --amend",
-    "test": "yarn test:nodejs",
+    "test": "jest --maxWorkers=60%",
     "test:nodejs": "jest --maxWorkers=60%",
     "test:watch": "jest --watch --maxWorkers=60%",
     "verify": "yarn clean && yarn lint && yarn build && yarn depcheck && yarn coverage",
@@ -44,7 +43,6 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@types/jest": "^25.2.1",
     "@types/node": "^10.17.21",
-    "@types/node-fetch": "^2.5.6",
     "@types/rimraf": "^3.0.0",
     "assertron": "^7.1.3",
     "babel-jest": "^25.4.0",
@@ -52,6 +50,7 @@
     "babel-plugin-istanbul": "^6.0.0",
     "codacy-coverage": "^3.4.0",
     "codecov": "^3.6.5",
+    "commitlint-circle": "^1.0.0",
     "depcheck": "^0.9.2",
     "dependency-check": "^4.1.0",
     "eslint": "^6.8.0",
