chore: disable quotes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,8 @@
         "*.tsx"
       ],
       "rules": {
-        "@typescript-eslint/type-annotation-spacing": "off"
+        "@typescript-eslint/type-annotation-spacing": "off",
+        "quotes": "off"
       }
     }
   ]
